# pybind11-project-example

./: CMakeLists.txt
CMake/: SofaPython3Tools.cmake
cpp_library_bindings/: CMakeLists.txt
cpp_library_bindings/_core/: cpp_library.cpp
include/cpp_library/: Foo.h
src/: Foo.cpp
