cmake_minimum_required(VERSION 3.8)
project(pybind11_project_example)

set(CMAKE_CXX_STANDARD 11)


find_package(PythonInterp REQUIRED)
find_package(PythonLibs "${PYTHON_VERSION_MAJOR}.${PYTHON_VERSION_MINOR}" REQUIRED )
if (PYTHONLIBS_FOUND)
    include_directories(${PYTHON_INCLUDE_DIRS})
    message("Using default python version: " ${PYTHONLIBS_VERSION_STRING})
endif()

find_package(Eigen3 REQUIRED)
find_package(pybind11 REQUIRED)

file(GLOB_RECURSE SOURCES src/**.cpp)
add_library(cpp_library SHARED ${SOURCES})
target_include_directories(cpp_library PUBLIC ./include)
target_link_libraries(cpp_library Eigen3::Eigen)

add_subdirectory(cpp_library_bindings)